# image-modifier

./: .gitignore  Cargo.toml  LICENSE  README.MD
src/: flags.rs  main.rs
src/filters/: grey.rs  greyscale.rs  isolate.rs  mod.rs
src/modifiers/: filters.rs  mod.rs
