[package]
name = "imgmod"
version = "0.1.0"
edition = "2021"
description = "Command line tool to simply modify image files."
readme = "README.MD"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.16.2"
image = "0.24.1"