[package]
name = "imgmod"
version = "2.0.0"
edition = "2021"
description = "Command line tool to simply modify image files with various filters."
readme = "README.MD"
license = "MIT"
license-file = "LICENSE"
keywords = [ "cli", "image", "images", "image-modification", "image-manipulation" ]
categories = [ "command-line-interface", "command-line-utilities" ]
repository = "https://github.com/c1m50c/image-modifier"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.16.2"
image = "0.24.1"
rand = "0.8.5"